--- a/rro_overlays/SettingsOverlay/AndroidManifest.xml
+++ b/rro_overlays/SettingsOverlay/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 /*
-** Copyright 2009, The Android Open Source Project
+** Copyright 2020, The Android Open Source Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -16,16 +16,11 @@
 ** limitations under the License.
 */
 -->
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.android.settingsoverlay">
 
-<!-- These resources are around just to allow their values to be customized
-     for different hardware and product builds.  Do not translate.
-
-     NOTE: The naming convention is "config_camelCaseValue". Some legacy
-     entries do not follow the convention, but all new entries should. -->
-
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-
-    <!-- The padding on the top of the statusbar (usually 0) -->
-    <dimen name="status_bar_padding_top">24.0px</dimen>
-
-</resources>
+    <overlay
+        android:isStatic="true"
+        android:priority="800"
+        android:targetPackage="com.android.settings" />
+</manifest>
