corfu: fix blanck screen

--- a/rootdir/etc/multi_init.rc
+++ b/rootdir/etc/multi_init.rc
@@ -40,7 +40,7 @@ import /vendor/etc/init/vendor.mediatek.hardware.nvram@1.1-sevice.rc
 import /vendor/etc/init/vendor.mediatek.hardware.nvram@1.1-sevice-lazy.rc
 import /vendor/etc/init/android.hardware.light@2.0-service-mediatek.rc
 import /vendor/etc/init/android.hardware.light@2.0-service-mediatek-lazy.rc
-import /vendor/etc/init/lights-mtk-default.rc
+import /vendor/etc/init/android.hardware.lights.moto.rc
 import /vendor/etc/init/lights-mtk-lazy.rc
 import /vendor/etc/init/merged_hal_service.rc
 import /vendor/etc/init/spm_script.rc
